# plaster-yaml

./: .editorconfig  .flake8  .gitignore  CHANGELOG.md  Justfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build-artifacts.yml  main.yml  publish-pypi.yml  release.yml  tests-artifacts.yml  tests.yml
scripts/: get_version.py  write_changelog.py
src/plaster_yaml/: __init__.py  compat.py  loader.py  paste_loader.py
tests/: config.yaml  conftest.py  test_loader.py  test_plaster_yaml.py  test_resolve_use.py
tests/dummy_packages/app1/: setup.py
tests/dummy_packages/app1/app1/: __init__.py
tests/dummy_packages/app1/app1.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/dummy_packages/app2/: setup.py
tests/dummy_packages/app2/app2/: __init__.py
tests/dummy_packages/app2/app2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/dummy_packages/myns.app1/: setup.py
tests/dummy_packages/myns.app1/myns.app1.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/dummy_packages/myns.app1/myns/app1/: __init__.py
tests/dummy_packages/myns.app2/: setup.py
tests/dummy_packages/myns.app2/myns.app2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/dummy_packages/myns.app2/myns/app2/: __init__.py
