[project]
name = "plaster-yaml"
version = "2.0.2"
description = "A plaster plugin to configure pyramid app with Yaml"
readme = "README.md"
authors = [{ name = "Guillaume Gauvrit", email = "guillaume@gauvr.it" }]
license = {text = "BSD-derived"}
requires-python = ">=3.9"
dependencies = [
    "importlib-metadata >=7.1.0; python_version <= '3.10'",
    "plaster >=1.0,<2",
    "PyYAML >=6.0.1,<7",
    "envsub >=0.1.15,<0.2",
]

[project.urls]
Homepage = "https://github.com/mardiros/plaster-yaml"
Documentation = "https://github.com/mardiros/plaster-yaml/blob/main/README.md"
Repository = "https://github.com/mardiros/plaster-yaml.git"
Issues = "https://github.com/mardiros/plaster-yaml/issues"
Changelog = "https://github.com/mardiros/plaster-yaml/blob/main/CHANGELOG.md"

[project.entry-points."plaster.loader_factory"]
"file+yaml" = "plaster_yaml:Loader"
"file+yml" = "plaster_yaml:Loader"
"file+json" = "plaster_yaml:Loader"

[dependency-groups]
dev = [
    # Tests
    "gunicorn >=20.1.0,<21",
    "PasteDeploy >=3.1.0,<4",
    "pytest >=6.2.5,<7",
    "waitress >=2.0.0,<3",
    "pyramid-helloworld >=2.0.3,<3",
    "pytest-cov >=5.0.0,<6",
    "flake8 >=7.0.0,<8",
    "mypy >=1.13.0,<2",
]
uwsgi = ["pastedeploy >=3.1.0,<4"]

[tool.pdm.build]
includes = ["src", "CHANGELOG.md"]
excludes = ["tests"]

[tool.mypy]
exclude = ["tests/dummy_packages"]
[[tool.mypy.overrides]]
module = "plaster_yaml.*"
disallow_any_generics = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["gunicorn.*", "plaster.*", "yaml", "waitress"]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "B",   # bug bear security warning
    "I",   # isort import order
    "F",   # pyflakes
    "UP",  # alter when better syntax is available
    "RUF", #  the ruff devleoper's own rules
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
